--- a/css/master.css
+++ b/css/master.css
@@ -1,59 +1,21 @@
 .grid {
+	margin: 0;
+	padding: 0;
 	display: grid;
 	grid-template-columns:200px 200px 200px;
 	height: 200px;
 	width: 200px;
-}
-
-.grid-item1 {
-	background-color: #7a1c16;
-	height: 200px;
-	width: 200px;
-	
 
 }
 
-.grid-item2 {
+div:nth-child(odd) {
+background-color: #7a1c16;
+}
+
+div:nth-child(even) {
 	text-align: center;
-	/*background-color: white;*/
-	height: 200px;
-	width: 200px;
-}
-
-.grid-item3 {
-	background-color: #7a1c16;
-	height: 200px;
-	width: 200px;
-}
-.grid-item4 {
 	background-color: white;
-	text-align: center;
-	height: 200px;
-	width: 200px;
 }
-.grid-item5 {
-	background-color: #7a1c16;
-	height: 200px;
-	width: 200px;
-}
-.grid-item6 {
-	background-color: white;
-	height: 200px;
-	width: 200px;
-}
-.grid-item7 {
-	background-color: #7a1c16;
-	height: 200px;
-	width: 200px;
-}
-.grid-item8 {
-	background-color: white;
-	text-align: center;
-	height: 200px;
-	width: 200px;
-}
-.grid-item9 {
-	background-color: #7a1c16;
-	height: 200px;
-	width: 200px;
+img {
+	width:196px;
 }
